# FinTrackr

./: .gitignore  .gitignore.txt  README.md  pyproject.toml
.github/workflows/: test.yml
src/fintrackr/: Init_New_db.sh  SQL_to_EDL.py  __init__.py  add_user.py  config.yml  fin_db.py  init_db.py  io.py  load_balances.py  load_transactions.py  plot.py  plot_accnt_balances.py  schema.sql  testing_utils.py  ui.py  utils.py
src/fintrackr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_SQL_to_EDL.py  test_db.py  test_plot.py  test_plot_accnt_balances.py
tests/data/: test_EDL.txt  test_SQL_schema.sql  test_balances.csv  test_config.yml  test_data_cc.csv  test_data_cc_header.csv  test_data_cc_labeled.csv  test_data_cc_wrongnumcols.csv  test_data_cc_wrongorder.csv  test_data_cc_wrongtype.csv  test_data_checking.csv
