[project]
name = "fintrackr"
version = "0.1.0"
description = "Personal finances and budgeting app"
readme = "README.md"
authors = [
    { name = "Stephanie Johnson", email = "johnson.stephanie076@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.2",
    "psycopg>=3.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
]

[project.scripts]
fintrackr = "fintrackr:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
